# FastAPI_project

./: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: depensens.py  routers.py
app/api/endpoints/: __init__.py  author.py  book.py  tag.py
app/crud/: base.py
app/models/: __init__.py  author.py  base.py  book.py  tag.py
app/repositories/: author.py  base_repository.py  book.py  tag.py
app/schemas/: author.py  book.py  tag.py
app/services/: author.py  book.py  tag.py
app/settings/: config.py  db.py
migration/: env.py
migration/versions/: 5dc4cdcd4662_initial_migration.py  ea3bd55d5dc5_initial_migration.py
